[gd_scene load_steps=2 format=3 uid="uid://ilo7pp76xyde"]

[ext_resource type="Script" path="res://scripts/auction_generator.gd" id="1_2no26"]

[node name="Auction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2no26")

[node name="AuctionItems" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -291.5
offset_right = -22.0
offset_bottom = 291.5
grow_horizontal = 0
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="AuctionItems"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemSpawn" type="Timer" parent="AuctionItems"]

[connection signal="timeout" from="AuctionItems/ItemSpawn" to="." method="_on_item_spawn_timeout"]
